objects/Opportunity_Competitor__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunity Competitors (Account)</relationshipLabel>
        <relationshipName>Opportunity_Competitors2</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Competitor_account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Competitor account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Competitor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunity Competitors (Competitor account)</relationshipLabel>
        <relationshipName>Opportunity_Competitors1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Competitor Offers</relationshipLabel>
        <relationshipName>Opportunity_Competitors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proposed_Quantity__c</fullName>
        <description>R3_R_0897</description>
        <label>Proposed Quantity in Tons</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Supplier_Product_Reference__c</fullName>
        <description>R3_R_0897</description>
        <label>Competitor Product Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R3_R_0897</description>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.CompetitorOpp__c</field>
                <operation>notEqual</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunity Competitors</relationshipLabel>
        <relationshipName>Opportunity_Competitors</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>